argocd-apps/fastapi-demo/development/spec/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-demo
  namespace: fastapi-demo
  labels:
    app: fastapi-demo
spec:
  # don't specify replicas here, let HPA do it
  # replicas: 1
  selector:
    matchLabels:
      app: fastapi-demo
  template:
    metadata:
      labels:
        app: fastapi-demo
    spec:
      containers:
      - name: fastapi-demo
        image: "efraintorlo/fastapi-demo:tag"
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 500m
            memory: 512Mi
      tolerations:
        - key: "backend"
          value: "true"
          operator: "Equal"
          effect: "NoSchedule"
