argocd-apps/fastapi-demo/development/spec/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-demo
  namespace: fastapi-demo
  labels:
    app: fastapi-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
